fix docker compose ports, add vite config stuff, add dep for vite on linux, change node image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,33 +6,33 @@ services:
       context: ./web-client
       dockerfile: Dockerfile.dev
     ports:
-      - 3001:3001
+      - 5173:5173
     volumes:
       - ./web-client:/app
     environment:
       - FASTAPI_SERVICE_URL=localhost:3000
       - NODE_SERVICE_URL=localhost:3002
 
+  # node-service:
+  #   build:
+  #     context: ./node-service
+  #     dockerfile: Dockerfile.dev
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./node-service:/app
+  #   environment:
+  #     - WEB_CLIENT_URL=localhost:3001
+  #     - PORT=3000
+  #     - MONGO_CONNECTION=${MONGO_CONNECTION}
+
   # fastapi-service:
   #   build:
   #     context: ./fastapi-service
   #     dockerfile: Dockerfile.dev
   #   ports:
-  #     - 3000:3000
+  #     - 3001:3001
   #   volumes:
   #     - ./fastapi-service:/app
   #   environment:
   #     - WEB_CLIENT_URL=localhost:3001
-
-  node-service:
-    build:
-      context: ./node-service
-      dockerfile: Dockerfile.dev
-    ports:
-      - 3002:3002
-    volumes:
-      - ./node-service:/app
-    environment:
-      - WEB_CLIENT_URL=localhost:3001
-      - PORT=3002
-      - MONGO_CONNECTION=${MONGO_CONNECTION}
