--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,21 @@ services:
     volumes:
       - ./web-client:/app
     environment:
-      - FASTAPI_SERVICE_URL=localhost:3000
-      - NODE_SERVICE_URL=localhost:3002
+      - VITE_FASTAPI_SERVICE_URL=http://localhost:3001
+      - VITE_NODE_SERVICE_URL=http://localhost:3000
 
-  # node-service:
-  #   build:
-  #     context: ./node-service
-  #     dockerfile: Dockerfile.dev
-  #   ports:
-  #     - 3000:3000
-  #   volumes:
-  #     - ./node-service:/app
-  #   environment:
-  #     - WEB_CLIENT_URL=localhost:3001
-  #     - PORT=3000
-  #     - MONGO_CONNECTION=${MONGO_CONNECTION}
+  node-service:
+    build:
+      context: ./node-service
+      dockerfile: Dockerfile.dev
+    ports:
+      - 3000:3000
+    volumes:
+      - ./node-service:/app
+    environment:
+      - WEB_CLIENT_URL=localhost:5173
+      - PORT=3000
+      - MONGO_CONNECTION=${MONGO_CONNECTION}
 
   # fastapi-service:
   #   build:
