e2e integrated, create btn to db and get all res with list from db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - WEB_CLIENT_URL=localhost:5173
       - PORT=3000
       - MONGO_CONNECTION=${MONGO_CONNECTION}
+      - MONGO_DATABASE_NAME=${MONGO_DATABASE_NAME}
 
   # fastapi-service:
   #   build:
